Make EsRestClient require configuration map when construct, reformat code
EsRestClient가 지금까지 하드코딩되거나 resource 파일에 종속적인 설정값으로 생성되는
문제를 수정하기 위하여 Configuration Map을 생성자가 받아 Map에서 설정값을 받아오는
방식으로 변경하였으며, Configuration Map에 요구되는 field는 다음과 같다.

String userName : elasticsearch username을 작성
String passWord : elasticsearch password를 작성
String certPath : EsRestClient가 사용할 elasticsearch의 certification.p12파일의 경로
String certPassWord : .p12 인증서 비밀번호
List<\Map> masterHostInfo : Map들의 리스트로 맵의 구조는 다음과 같다
           String name : elasticsearch node name
           String hostName : node's hostname
           String port : node's port
           String hostScheme : connection Scheme (http, https...)

EsRestClient에서 메소드가 멤버 변수를 바로 사용하지 않고 getter 메소드를 사용하는
부분을 수정했음.

Fix multiple methods by changing of EsRestClient class's constructor change
 EsRestClient class의 생성자가 수정됨에 따라 EsRestClient를 사용하던 클래스들의
 메소드들을 적절히 수정하였음.

 test code들은 @BeforeEach 어노테이션을 통하여 Configuration Map을 하드 코딩으로
 생성하여 테스트 실행하도록 수정했음.

 Operation code에서 EsRestClient를 사용하는 경우 Operation의 생성자에서 Configuration Map
 을 받아와서 excute() 메소드에서 EsRestClient를 실행하도록 수정했음.

Delete unused resource file, change file name, Comment deprecated methods

Fix methods by changing of EsRestClient, add login feature
 EsRestClient class의 생성자가 수정됨에 따라 EsRestClient를 사용하던 클래스들의
 메소드들을 적절히 수정하였음.

 Monitor 사용 시 elasticsearch에 대한 적절한 접근 권한을 가진 자가 실행해야 하므로
 사용자에게 elasticsearch id/pw/certpw를 요청하고, 인증 실패시 프로세스를 exit하도록
 기능 추가하였음